--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* 
-Theme Name:		 Affiliate Site
-Theme URI:		 http://childtheme-generator.com/
+Theme Name:		 Affiliate Site - Bootstrap
+Theme URI:		 https://livingaustin.org/
 Github Theme URI: https://github.com/bcorlett201660/affiliate-site-bootstrap
 Description:	 Affiliate Site is a child theme of Bootstrap Basic4
 Author:			 Brandon Corlett
@@ -8,7 +8,6 @@ Author URI:		 http://childtheme-generator.com/
 Template:		 bootstrap-basic4
 Version:		 1.0.0
 Text Domain:	 affiliate-site-bootstrap
-
 */
 
 
