--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 /* 
 Theme Name:		 Affiliate Site - Bootstrap
 Theme URI:		 https://livingaustin.org/
+Github Theme URI: bcorlett201660/affiliate-site-bootstrap
 Github Theme URI: https://github.com/bcorlett201660/affiliate-site-bootstrap
 Description:	 Affiliate Site is a child theme of Bootstrap Basic4
 Author:			 Brandon Corlett
 Author URI:		 http://childtheme-generator.com/
 Template:		 bootstrap-basic4
-Version:		 1.0.7
+Version:		 1.0.8
 Text Domain:	 affiliate-site-bootstrap
 */
 
