--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /* 
 Theme Name:		 Affiliate Site - Bootstrap
-Theme URI:		 https://livingaustin.org/
-Github Theme URI: bcorlett201660/affiliate-site-bootstrap
-Github Theme URI: https://github.com/bcorlett201660/affiliate-site-bootstrap
+Theme URI:		 https://github.com/bcorlett201660/affiliate-theme-bootstrap
+Github Theme URI: bcorlett201660/affiliate-theme-bootstrap
+Github Theme URI: https://github.com/bcorlett201660/affiliate-theme-bootstrap
 Description:	 Affiliate Site is a child theme of Bootstrap Basic4
 Author:			 Brandon Corlett
-Author URI:		 http://childtheme-generator.com/
+Author URI:		 https://github.com/bcorlett201660/affiliate-theme-bootstrap
 Template:		 bootstrap-basic4
 Version:		 1.0.9
 Text Domain:	 affiliate-site-bootstrap
