--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ Description:	 Affiliate Site is a child theme of Bootstrap Basic4
 Author:			 Brandon Corlett
 Author URI:		 https://github.com/bcorlett201660/affiliate-theme-bootstrap
 Template:		 bootstrap-basic4
-Version:		 1.1.1
+Version:		 1.1.2
 Text Domain:	 affiliate-site-bootstrap
 */
 
@@ -14,3 +14,6 @@ Text Domain:	 affiliate-site-bootstrap
 /*
     Add your custom styles here
 */
+.test{
+    display: none;
+}
