--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ Description:	 Affiliate Site is a child theme of Bootstrap Basic4
 Author:			 Brandon Corlett
 Author URI:		 https://github.com/bcorlett201660/affiliate-theme-bootstrap
 Template:		 bootstrap-basic4
-Version:		 1.1.3
+Version:		 1.1.4
 Text Domain:	 affiliate-site-bootstrap
 */
 
@@ -15,5 +15,9 @@ Text Domain:	 affiliate-site-bootstrap
     Add your custom styles here
 */
 .test{
+    display: none;
+}
+
+.test-2{
     display: none;
 }
